[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optax-tunelex"
version = "0.1.0"
description = "Tuneless optimizer experiments for Optax and JAX."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Tunelex contributors"}]
keywords = ["jax", "optax", "optimizer"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/tinker/Tunelex"
Repository = "https://github.com/tinker/Tunelex"
Issues = "https://github.com/tinker/Tunelex/issues"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
